@@ -1592,7 +1592,7 @@ coordinate system.
 </p>
 
 <p>
-Multiple static load cases are generated by specifying
+Up to thirty static load cases may be anlayzed by specifying
 <a href="#Variables">the variable nL</a>
 in the
 <a href="#InputData">Input Data file</a>,
@@ -1608,14 +1608,14 @@ the same frame element in the same load case.
 </p>
 
 <p>
-Whenever the average axial strain in a frame element (<i>Nx/(EAx)</i>) exceeds 0.001 (0.1%) in magnitude, a warning message is displayed indicating the strain level and the element in question.    Most structural materials yield at strains between
+Whenever the average axial strain in a frame element connection (<i>Nx/(EAx)</i>) exceeds 0.001 (0.1%) in magnitude, a warning message is displayed indicating the strain level and the element in question.    Most structural materials yield at strains between
 0.1% and 0.2%.   When this warning message is displayed the structure is likely in an overloaded condition and the loads should be reduced.
 Note that this check for overloaded elements provides an approximate stress check.
 A more complete stress check would compute the composite axial, shear, torsion
 and bending stresses and strains within each element.   
 Such a check requires additional cross section information: 
 the section moduli and the section dimensions,
-as described in section 7.14 below.  
+as described in sections 7.13 and 7.14 below.  
 </p>
 
 <p>
@@ -2149,7 +2149,7 @@ dx           # length of x-axis increment for frame element internal force data,
 
 # load data ...
 
-nL                        # number of static load cases,  1..63
+nL                        # number of static load cases,  1..30
 
 # Begin Static Load Case 1  
 
@@ -2261,7 +2261,7 @@ nD                   # number of prescribed displacements nD<=nR (global)
 
 # End Static Load Case 2
 
-# repeat up to 32 static load cases
+# repeat up to 30 static load cases
 
 
 # dynamic analysis data ...
