@@ -1,5 +1,6 @@
 *Thu Jan 14 2010 Henri Gavin <henri.gavin@duke.edu> 0.20100105
 - improve grammar in template.3dd
+- update user-manual.html to specify the maximum number of load cases is 30 
 
 *Mon Jan 11 2010 Henri Gavin <henri.gavin@duke.edu> 0.20100105
 - improve parsing data format for internal element forces and displacements
